# matrix-bridge

./: Cargo.toml  README.md  SECURITY.md
src/: cli.rs  client.rs  config.rs  error.rs  format.rs  main.rs  mcp_main.rs  trust.rs
src/mcp/: mod.rs  notifications.rs  tools.rs
