[package]
name = "matrix-bridge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "E2EE Matrix bridge — CLI and MCP server for any AI coding agent"
repository = "https://github.com/elkimek/matrix-bridge"
readme = "README.md"
keywords = ["matrix", "e2ee", "mcp", "bridge", "encryption"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "matrix-bridge"
path = "src/main.rs"

[[bin]]
name = "matrix-bridge-mcp"
path = "src/mcp_main.rs"

[features]
default = ["cli", "mcp"]
cli = ["dep:clap", "dep:rpassword"]
mcp = ["dep:rmcp", "dep:schemars"]

[dependencies]
# Matrix
matrix-sdk = { version = "=0.14.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "bundled-sqlite",
    "rustls-tls",
    "markdown",
] }

# Async
tokio = { version = "1", features = ["full"] }

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
rpassword = { version = "7", optional = true }

# MCP server (optional)
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "schemars"], optional = true }
schemars = { version = "1", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
